--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           
              </div>
           <div class="card-body">
-            <button href="#" class="btn btn-primary align-content-center" id="btn" style="width:83%; margin-left: 30px;">Sign In</button>
+            <button href="gallery.html" class="btn btn-primary align-content-center" id="btn" style="width:83%; margin-left: 30px;">Sign In</button>
           </div>
           <div class="card-footer text-muted text-center " style="color: white !important;">
-              <p>Don't have an account? <a href="index.html">Sign Up</a> Here </p>
+              <p>Don't have an account? <a href="#">Sign Up</a> Here </p>
             
           </div>
         </div>
