--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           
              </div>
           <div class="card-body">
-            <button href="gallery.html" class="btn btn-primary align-content-center" id="btn" style="width:83%; margin-left: 30px;">Sign In</button>
+            <a href="gallery.html" class="btn btn-primary align-content-center" id="btn" style="width:83%; margin-left: 30px;">Sign In</a>
           </div>
           <div class="card-footer text-muted text-center " style="color: white !important;">
               <p>Don't have an account? <a href="#">Sign Up</a> Here </p>
