--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="gallery.html" class="btn btn-primary align-content-center" id="btn" style="width:83%; margin-left: 30px;">Sign In</a>
           </div>
           <div class="card-footer text-muted text-center " style="color: white !important;">
-              <p>Don't have an account? <a href="#">Sign Up</a> Here </p>
+              <p>Don't have an account? <a href="index.html">Sign Up</a> Here </p>
             
           </div>
         </div>
